re-positioned save changes button

--- a/partials/account.html
+++ b/partials/account.html
@@ -62,7 +62,7 @@
      
      <div class="action_btns">
                   
-         <div class="one_half last">
+         <div class="save_changes">
              <input type="submit" id="register" value="Save Changes" class="btn btn_red">
          </div>
          
