Disabled password input and added change button to password field

--- a/partials/account.html
+++ b/partials/account.html
@@ -23,9 +23,10 @@
      <br>
      
      <label  for="passwordLabel">Password</label>
-     <input type="password" id="passwordRegister" name="passwordRegister">
-     <div id="password_account_error" class="account_error">Error</div> 
-
+     <input type="password" id="passwordRegister" name="passwordRegister" disabled>
+     <input type="button" value="Change" class="btn btn_red">
+     
+     <br>
      <br>
      
      <label  for="firstNameLabel">First Name</label>
