--- a/partials/account.html
+++ b/partials/account.html
@@ -18,38 +18,38 @@
 
      <label  for="emailLabel">Email</label>
      <input type="text" id="emailRegister" name="emailRegister">
-     <div id="email_account_error" class="account_error">Error</div>
+     <div id="email_account_error" class="account_error"></div>
 
      <br>
      
      <label  for="passwordLabel">Password</label>
      <input type="password" id="passwordRegister" name="passwordRegister" disabled>
-     <input type="button" value="Change" class="btn btn_red">
+     <input type="button" value="Change Password" class="btn btn_red">
      
      <br>
      <br>
      
      <label  for="firstNameLabel">First Name</label>
      <input type="text" id="firstName" name="firstName">
-     <div id="firstName_account_error" class="account_error">Error</div> 
+     <div id="firstName_account_error" class="account_error"></div> 
 
      <br>
      
      <label  for="lastNameLabel">Last Name</label>
      <input type="text" id="lastName" name="lastName">
-     <div id="lastName_account_error" class="account_error">Error</div>
+     <div id="lastName_account_error" class="account_error"></div>
 
      <br>
      
      <label  for="ageLabel">Age</label>
      <input type="number" id="age" name="age" onkeypress="return isNumberKey(event)">
-     <div id="age_account_error" class="account_error">Error</div> 
+     <div id="age_account_error" class="account_error"></div> 
 
      <br>
      
      <label  for="cityLabel">City</label>
      <input type="text" id="city" name="city">
-     <div id="city_account_error" class="account_error">Error</div>
+     <div id="city_account_error" class="account_error"></div>
 
      <br>
      
@@ -58,7 +58,7 @@
      <datalist id="countryList">
      <option value="A">
      </datalist>
-           <div id="country_account_error" class="account_error">Error</div>
+           <div id="country_account_error" class="account_error"></div>
      <br>
      
      <div class="action_btns">
