--- a/partials/account.html
+++ b/partials/account.html
@@ -3,14 +3,12 @@
       
 <head>
 
-   <link rel="stylesheet" href="/partials/login_style.css"> 
+   <link rel="stylesheet" href="/partials/login_style.css">
+   <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script> 
 </head>
 
 <body>
-      
 
- 
-      
     <div class="user_setting">
         
       <!--<form id="form2" method="post" action = "/controllers/register">-->
