--- a/partials/account.html
+++ b/partials/account.html
@@ -4,6 +4,7 @@
 <head>
 
    <link rel="stylesheet" href="/partials/login_style.css">
+   <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
    <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script> 
 </head>
 
@@ -71,8 +72,6 @@
 
         
     </div>
-    
-    
 
 </body>
 </html>
