Able to send user result to front end

--- a/partials/account.html
+++ b/partials/account.html
@@ -22,7 +22,7 @@
      <br>
      
      <label  for="passwordLabel">Password</label>
-     <input type="password" id="passwordRegister" name="passwordRegister" disabled>
+     <!--<input type="password" id="passwordRegister" name="passwordRegister" disabled>-->
      <input type="button" value="Change Password" class="btn btn_red">
      
      <br>
