Created initial code for updating user information

--- a/partials/account.html
+++ b/partials/account.html
@@ -13,8 +13,7 @@
 
     <div class="user_setting">
         
-      <!--<form id="form2" method="post" action = "/controllers/register">-->
-      <form>
+      <form id="account_setting_form" method="post" action = "/controllers/accountSettings">
 
      <label  for="emailLabel">Email</label>
      <input type="text" id="emailRegister" name="emailRegister">
