--- a/partials/account.html
+++ b/partials/account.html
@@ -2,51 +2,47 @@
 <html>
       
 <head>
-
-   <link rel="stylesheet" href="/partials/login_style.css">
-   <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script> 
-   <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
-   <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script> 
+ <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
 
     <div class="user_setting">
         
-      <form id="account_setting_form" method="post" action = "/controllers/accountSettings">
+     <form id="account_setting_form" method="POST" action ="/controllers/accountSettings">
 
-     <label  for="emailLabel">Email</label>
-     <input type="text" id="emailRegister" name="emailRegister">
+     <label>Email</label>
+     <input type="text" id="email_account" name="email">
      <div id="email_account_error" class="account_error"></div>
 
      <br>
      
-     <label  for="passwordLabel">Password</label>
+     <label>Password</label>
      <input type="button" value="Change Password" class="btn btn_red">
      
      <br>
      <br>
      
-     <label  for="firstNameLabel">First Name</label>
-     <input type="text" id="firstName" name="firstName">
+     <label>First Name</label>
+     <input type="text" id="firstName_account" name="firstName">
      <div id="firstName_account_error" class="account_error"></div> 
 
      <br>
      
-     <label  for="lastNameLabel">Last Name</label>
-     <input type="text" id="lastName" name="lastName">
+     <label>Last Name</label>
+     <input type="text" id="lastName_account" name="lastName">
      <div id="lastName_account_error" class="account_error"></div>
 
      <br>
      
-     <label  for="cityLabel">City</label>
-     <input type="text" id="city" name="city">
+     <label>City</label>
+     <input type="text" id="city_account" name="city">
      <div id="city_account_error" class="account_error"></div>
 
      <br>
      
-     <label  for="countryLabel">Country</label>
-     <input type="text" id="country" name="country" list="countryList">
+     <label>Country</label>
+     <input type="text" id="country_account" name="country" list="countryList">
      <datalist id="countryList">
      </datalist>
            <div id="country_account_error" class="account_error"></div>
@@ -55,15 +51,21 @@
      <div class="action_btns">
                   
          <div class="save_changes">
-             <input type="submit" id="register" value="Save Changes" class="btn btn_red">
+             <input type="submit" id="save_change" value="Save Changes" class="btn btn_red">
          </div>
          
      </div>
+     
+     
            
     </form>
 
         
     </div>
-
+    
+    <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script> 
+   <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script>
+   <link rel="stylesheet" href="/partials/login_style.css">
+   
 </body>
 </html>
