Added requires field. Got rid of code that involved email.

--- a/partials/account.html
+++ b/partials/account.html
@@ -24,25 +24,25 @@
      <br>
      
      <label>First Name</label>
-     <input type="text" id="firstName_account" name="firstName">
+     <input type="text" id="firstName_account" name="firstName" required="">
      <div id="firstName_account_error" class="account_error"></div> 
 
      <br>
      
      <label>Last Name</label>
-     <input type="text" id="lastName_account" name="lastName">
+     <input type="text" id="lastName_account" name="lastName" required="">
      <div id="lastName_account_error" class="account_error"></div>
 
      <br>
      
      <label>City</label>
-     <input type="text" id="city_account" name="city">
+     <input type="text" id="city_account" name="city" required="">
      <div id="city_account_error" class="account_error"></div>
 
      <br>
      
      <label>Country</label>
-     <input type="text" id="country_account" name="country" list="countryList">
+     <input type="text" id="country_account" name="country" list="countryList" required="">
      <datalist id="countryList">
      </datalist>
            <div id="country_account_error" class="account_error"></div>
