--- a/partials/account.html
+++ b/partials/account.html
@@ -3,6 +3,7 @@
       
 <head>
  <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
+<script src="/components/jquery/jquery.leanModal.min.js" type="text/javascript"charset="utf-8" ></script>
 </head>
 
 <body>
@@ -18,6 +19,7 @@
      <br>
      
      <label>Password</label>
+     <input type="password" id="password_account" name="password" disabled>
      <input type="button" value="Change Password" class="btn btn_red">
      
      <br>
