--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -40,7 +40,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
                 <li><a id="wantedPage" class="page" data-page="wanted" href="#">Wanted</a></li>
-                <li><a id="account" class="page" data-page="account" href="#">Account Settings</a></li>
+                <li><a id="accountPage" class="page" data-page="account" href="#">Account Settings</a></li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
