Got rid of partials

--- a/partials/account.html
+++ b/partials/account.html
@@ -1,12 +1,3 @@
-<!DOCTYPE HTML>
-<html>
-      
-<head>
- <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
-<script src="/components/jquery/jquery.leanModal.min.js" type="text/javascript"charset="utf-8" ></script>
-</head>
-
-<body>
 
     <div class="user_setting">
         
@@ -20,7 +11,7 @@
      
      <label>Password</label>
      <input type="password" id="password_account" name="password" disabled>
-     <input type="button" value="Change Password" class="btn btn_red">
+     <input type="button" id="change_password" value="Change Password" class="btn btn_red">
      
      <br>
      <br>
@@ -58,18 +49,14 @@
          </div>
          
      </div>
-     
-     
-           
+
     </form>
 
-        
     </div>
     
+    <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/components/jquery/jquery.leanModal.min.js" type="text/javascript"charset="utf-8" ></script>
     <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script> 
     <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
    <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script>
    <link rel="stylesheet" href="/partials/login_style.css">
-   
-</body>
-</html>
