fixed error in account setting

--- a/partials/account.html
+++ b/partials/account.html
@@ -1,6 +1,4 @@
 
-    
-    
     <div class="user_setting">
         
      <form id="account_setting_form" method="POST" action ="/controllers/accountSettings">
@@ -103,10 +101,10 @@
         
     </div>
     
-        <link href="/components/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" >
+        <!-- <link href="/components/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" >
     <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
     <script src="/components/jquery/jquery.leanModal.min.js" type="text/javascript"charset="utf-8" ></script>
     <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script> 
     <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
    <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script>
-   <link rel="stylesheet" href="/partials/login_style.css">
+   <link rel="stylesheet" href="/partials/login_style.css"> -->
