--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -9,7 +9,7 @@
 
 /* Overlay when Modal is open */
 #lean_overlay {
-    position: fixed;
+    
     z-index:100;
     top: 0px;
     left: 0px;
@@ -21,12 +21,12 @@
 
 /* Modal box or Popup box */
 .popupContainer{
-	position:absolute;
+	
 	width:500px;
 	height: auto;
 	left:45%;
 	top:50px;
-	background: #FFF;
+	background: #000;
 }
 
 /* Style for buttons and 2 column grid that contains the login and sign up button */
