--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -35,7 +35,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a id="sellPage" class="firstPage" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
                 <li><a id="wantedPage" class="page" data-page="wanted" href="#">Wanted</a></li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
