--- a/partials/sell.html
+++ b/partials/sell.html
@@ -5,52 +5,31 @@ include('../controllers/database.php');
 <html>
 <head>
 	<script src="pagination.js"></script>
+	<script type="text/javascript" src="../components/jquery/jquery-2.2.3.js"></script>
+
+	<style>
+	#pagination div { display: inline-block; margin-right: 5px; margin-top: 5px }
+	#pagination .cell a { border-radius: 3px; font-size: 11px; color: #333; padding: 8px; text-decoration:none; border: 1px solid #d3d3d3; background-color: #f8f8f8; }
+	#pagination .cell a:hover { border: 1px solid #c6c6c6; background-color: #f0f0f0;  }
+	#pagination .cell_active span { border-radius: 3px; font-size: 11px; color: #333; padding: 8px; border: 1px solid #c6c6c6; background-color: #e9e9e9; }
+	#pagination .cell_disabled span { border-radius: 3px; font-size: 11px; color: #777777; padding: 8px; border: 1px solid #dddddd; background-color: #ffffff; }
+	</style>
 	
 </head>
 <body>
+	
 	<div id="postTitle">
 		<h1>Selling Shoes Post</h1>
 	</div>
-	<div class="container "id="sellPostArea">
-		<div class="row" id="firstRow">
-			<div class="col-sm-4" id="first_firstPost">
-				
-			</div>
-			<div class="col-sm-4" id="first_secondPost">
-
-			</div>
-			<div class="col-sm-4" id="first_thirdPost">
-			</div>
-		</div>
-
-		<div class="row" id="secondRow">
-			<div class="col-sm-4" id="second_firstPost">
-				
-			</div>
-			<div class="col-sm-4" id="second_secondPost">
-
-			</div>
-			<div class="col-sm-4" id="second_thirdPost">
-			</div>
-		</div>
-
-		<div class="row" id="thirdRow">
-			<div class="col-sm-4" id="third_firstPost">
-				
-			</div>
-			<div class="col-sm-4" id="third_secondPost">
-
-			</div>
-			<div class="col-sm-4" id="third_thirdPost">
-			</div>
-		</div>
-
+	
+	<div id="articleArea">
+		<h2> This is the Article Area</h2>
 	</div>
 
-	<button id="pagination">1</button>
-	<button id="pagination">2</button>
-	<button id="pagination">3</button>
-	<button id="pagination">4</button>
+	<div id="pagination" class="firstPage">
+		<h4> Display pagination </h4>
+		<div><a href="#" id="1"></a></div>
+	</div>
 
 </body>
 
