can navigate all pages

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -55,17 +55,17 @@
 	});
 });-->
 <div id="postTitle">
-		<h1>Selling Shoes Post</h1>
-	</div>
+	<h1>Selling Shoes Post</h1>
+</div>
 	
-	<div id="articleArea">
-		<h2> This is the Article Area</h2>
-	</div>
-	<div id="pagination" class="firstPage">
-		<h4> Display pagination </h4>
-		<div><a href="#" id="1"></a></div>
-	</div>
-<script src="pagination.js"></script>
+<div id="articleArea">
+	<h2> This is the Article Area</h2>
+</div>
+<div id="pagination" class="firstPage">
+	<h4> Display pagination </h4>
+	<div><a href="#" id="1"></a></div>
+</div>
+<!-- <script src="pagination.js"></script> -->
 
 <style>
 #pagination div { 
