--- a/partials/sell.html
+++ b/partials/sell.html
@@ -63,7 +63,7 @@
 </div>
 <div id="pagination" class="firstPage">
 	<h4> Display pagination </h4>
-	<div><a href="#" id="1"></a></div>
+	<div><a href="#" id="1">1</a></div>
 </div>
 <!-- <script src="pagination.js"></script> -->
 
