started modular pattern for pagination.js. Will need to change more. Can see error for pagination.js when click 1 in sell.html and see console

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -63,9 +63,9 @@
 </div>
 <div id="pagination" class="firstPage">
 	<h4> Display pagination </h4>
-	<div><a href="#" id="1"></a></div>
+	<div><a href="#" id="1">1</a></div>
 </div>
-<!-- <script src="pagination.js"></script> -->
+<script src="pagination.js"></script>
 
 <style>
 #pagination div { 
