--- a/partials/account.html
+++ b/partials/account.html
@@ -8,7 +8,7 @@
      
      <label>Password</label>
      <input type="password" id="password_account" name="password" disabled>
-     <a id="change_password" href="#modal" class="btn btn_red">Change Password</a>
+     <a class="btn btn_red" data-toggle="modal" data-target="#modal">Change Password</a>
      
      <br>
      <br>
@@ -45,51 +45,59 @@
      </div>
     </form>
     </div>
-    
-    <div id="modal" class="popupContainer" style="display:none;">
-        
-    <header class="popupHeader">
-    
-    <span class="header_title">Change Password</span>
-    <span class="modal_close"><i class="fa fa-times"></i></span>
- 
-</header>
-    <section class="popupBody">
-        
-    <div class="user_login" style="display:block;">
-        
-        <form id="password_setting_form" method="POST" action ="/controllers/accountSettings">
+
+     <div id="modal" class="modal fade" role="dialog">   
+      
+      <div class="modal-dialog">
           
-     <label>Old Password</label>
-     <input type="password" id="old_password" name="password">
-     <div id="error_old_password" class="account_error"></div>
-     <br>  
+          <div class="modal-content">
+              
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <span class="header_title">Change Password</span>
+                </div> 
+              
+                    <div class="modal-body">
+        
+                        <div class="user_login" style="display:block;">
+
+                            <form id="password_setting_form" method="POST" action ="/controllers/accountSettings">
+          
+                                <label>Old Password</label>
+                                <input type="password" id="old_password" name="password">
+                                <div id="error_old_password" class="account_error"></div>
+                                <br>  
      
-     <label>New Password</label>
-     <input type="password" id="new_password" name="password">
-     <div id="error_new_password" class="account_error"></div>
-     <br>  
+                                <label>New Password</label>
+                                <input type="password" id="new_password" name="password">
+                                <div id="error_new_password" class="account_error"></div>
+                                <br>  
      
-     <label>Confirm New Password</label>
-     <input type="password" id="confirm_new_password" name="password">
-     <div id="error_confirm_password" class="account_error"></div>
-     <br> 
+                                <label>Confirm New Password</label>
+                                <input type="password" id="confirm_new_password" name="password">
+                                <div id="error_confirm_password" class="account_error"></div>
+                                <br> 
      
-     <div class="action_btns">
+                                <div class="action_btns">
                   
-         <div class="save_changes">
-             <input type="submit" id="save_password" value="Save Changes" class="btn btn_red">
-             <div id="error_save_password" class="account_error"></div>
-         </div>
+                                    <div class="save_changes">
+                                    <input type="submit" id="save_password" value="Save Changes" class="btn btn_red">
+                                    <div id="error_save_password" class="account_error"></div>
+                                    </div>
          
-     </div> 
+                                </div> 
             
-      </form>
+                            </form>
             
-     </div>
+                        </div>
     
-    </section>
+                    </div>
+    
+            </div>
+    
+        </div>
         
     </div>
+    <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script>
