changing to authentication.php

--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -60,7 +60,7 @@
 
                 <!--<li><a id="wantedPage" class="page" onclick="fbLogout()">Logout</a></li>-->
                 <!--<li><a id="wantedPage" class="page" onclick="authentication.logout()">Logout</a></li>-->
-                <li><a id="logout" class="page" onclick="logout()">Logout</a></li>
+                <li><a id="logout" onclick="logout()">Logout</a></li>
             </ul>
         </div> <!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
