--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -11,6 +11,8 @@
     <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/authentication.js" type="text/javascript" charset="utf-8"></script>
+    
+    <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
 
     <title>ShoeTaku</title>
 
@@ -71,6 +73,5 @@
         <div id="partial_view"></div>
     </div>
     <script src="/partials/view-controller.js" type="text/javascript" charset="utf-8"></script>
-    
     </body>
 </html>
