--- a/partials/account.html
+++ b/partials/account.html
@@ -101,8 +101,39 @@
             </div>
     
         </div>
-        
     </div>
+    
+     <!--<div class="modal fade" id="forgot_password" role="dialog">
+            <div class="modal-dialog">-->
+                  <!-- Modal content-->
+                <!--<div class="modal-content">
+                    
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <span class="header_title">Forgot Password</span>
+                    </div>
+                    
+                    <form>
+                        <p>Please enter your email so your password can be reset!</p>
+                        <br>
+                        <label  for="emailLabel">Email</label>
+                        <input type="text" id="email_password" name="emailRegister">
+                        <div id="error_email_password"></div>
+                     
+                        <div class="action_btns"> 
+                            <div class="one_half">
+                                <a class="btn back_btn" href="#" data-dismiss="modal">Back</a>
+                            </div>
+                             
+                            <div class="one_half last">
+                                <input type="submit" id="forgot_password_button" value="Submit" class="btn btn_red">
+                            </div> 
+                        </div>    
+                    </form>
+                </div>
+            </div> 
+        </div>-->
+    
     <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
     <link href="/partials/login_style.css" rel="stylesheet">
     <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script>
