--- a/partials/account.html
+++ b/partials/account.html
@@ -3,6 +3,9 @@
      <form id="account_setting_form" method="POST" action ="/controllers/accountSettings">
      <br>
      
+     <a class="btn btn_red" data-toggle="modal" data-target="#modal">Change Password</a>
+     <br>
+     
      <label>First Name</label>
      <input type="text" id="firstName_account" name="firstName" >
      <div id="firstName_account_error" class="account_error"></div> 
@@ -88,10 +91,10 @@
         </div>
     </div>
     
-     <!--<div class="modal fade" id="forgot_password" role="dialog">
-            <div class="modal-dialog">-->
+     <div class="modal fade" id="forgot_password" role="dialog">
+            <div class="modal-dialog">
                   <!-- Modal content-->
-                <!--<div class="modal-content">
+                <div class="modal-content">
                     
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -117,7 +120,7 @@
                     </form>
                 </div>
             </div> 
-        </div>-->
+        </div>
     
     <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
     <link href="/partials/login_style.css" rel="stylesheet">
