--- a/partials/sell.html
+++ b/partials/sell.html
@@ -1,72 +1,3 @@
-
-
-	<!--<script src="pagination.js"></script>-->
-	<!--<script type="text/javascript" src="/components/jquery/jquery-2.2.3.js"></script>
-
-	<style>
-	#pagination div { display: inline-block; margin-right: 5px; margin-top: 5px }
-	#pagination .cell a { border-radius: 3px; font-size: 11px; color: #333; padding: 8px; text-decoration:none; border: 1px solid #d3d3d3; background-color: #f8f8f8; }
-	#pagination .cell a:hover { border: 1px solid #c6c6c6; background-color: #f0f0f0;  }
-	#pagination .cell_active span { border-radius: 3px; font-size: 11px; color: #333; padding: 8px; border: 1px solid #c6c6c6; background-color: #e9e9e9; }
-	#pagination .cell_disabled span { border-radius: 3px; font-size: 11px; color: #777777; padding: 8px; border: 1px solid #dddddd; background-color: #ffffff; }
-	</style>
-	
-</head>
-<body>
-	
-	<div id="postTitle">
-
-		<h1>Selling Shoes Post</h1>
-	</div>
-	
-	<div id="articleArea">
-		<h2> This is the Article Area</h2>
-	</div>
-
-	<div id="pagination" class="firstPage">
-		<h4> Display pagination </h4>
-		<div><a href="#" id="1"></a></div>
-	</div>
-
-
-</body>
-
-<script>
-	$(document).ready(function(){
-	
-	$("#test").click(function(){
-		var url = "/controllers/testing/tests";
-		
-		var param = JSON.stringify({test:test});
-		$.ajax({
-			url: url,
-			data: param,
-			dataType: "json",
-			success: function(data, textStatus, jqXHR){
-				console.log(data);
-			},
-			error: function(jqXHR, textStatus, error){
-				//debug.log(textStatus + ":" + error);
-			},
-			complete: function(jqXHR, textStatus){
-				//debug.log("ajax call complete");
-			}
-		})
-	});
-});-->
-<div id="postTitle">
-	<h1>Selling Shoes Post</h1>
-</div>
-	
-<div id="articleArea">
-	<h2> This is the Article Area</h2>
-</div>
-<div id="pagination" class="firstPage">
-	<h4> Display pagination </h4>
-	<div><a href="#" id="1">1</a></div>
-</div>
-<!--<script src="pagination.js"></script>-->
-
 <style>
 #pagination div { 
 	display: inline-block; 
@@ -105,3 +36,96 @@
 	background-color: #ffffff; 
 }
 </style>
+
+<div id="postTitle">
+	<h1>Selling Shoes Post</h1>
+</div>
+<!-- 
+<div id="pagination" class="firstPage">
+	<h4> Display pagination </h4>
+	<div><a href="#" id="1">1</a></div>
+</div> -->
+
+	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#createSellPost">I want to sell my shoes!</button>
+	<!-- Modal -->
+	<div class="modal fade" id="createSellPost" role="dialog">
+	    <div class="modal-dialog">
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		        <div class="modal-header">
+		          	<button type="button" class="close" data-dismiss="modal">&times;</button>
+		          	<h4 class="modal-title">Please provide us the details about the shoes you want to sell</h4>
+		        </div>
+		        <form action="/controllers/shoe" method="POST">
+		        	<div class="modal-body">
+		          		<div class="form-group">
+		          			<label for="sellPostTitle">Title:</label>
+		          			<div class="input-group col-xs-12">
+		          				<input class="form-control" type="text" name="title" id="sellPostTitle">
+		          			</div>
+		          		</div>
+		          		<div class="form-group">
+		          			<label for="shoeBrand">Shoe Brand:</label>
+		          			<div class="input-group col-xs-12">
+		          				<select id="sellBrand">
+		          					<option value="nike">Nike</option>
+		          					<option value="jordan">Jordan</option>
+		          					<option value="adidas">Adidas</option>
+		          					<option value="puma">Puma</option>
+		          				</select>
+		          			</div>
+		          		</div>
+		          		<div class="form-group">
+		          			<label for="shoeModel">Shoe Model:</label>
+		          			<div class="input-group col-xs-12">
+		          				<input class="form-control" type="text" name="sellShoeModel" id="sellShoeModel">
+		          			</div>
+		          		</div>
+		          		<div class="form-group">
+		          			<label for="price">Price</label>
+		          			<div class="input-group col-xs-12">
+		          				<input class="form-control" type="text" name="sellPrice" id="sellPrice">
+		          			</div>
+		          		</div>
+		          		<div class="form-group">
+		          			<label for="sellCondition">Item Condition</label>
+		          			<div class="input-group col-xs-12">
+		          				<select id="sellCondition">
+		          					<option value="1">1</option>
+		          					<option value="2">2</option>
+		          					<option value="3">3</option>
+		          					<option value="4">4</option>
+		          					<option value="5">5</option>
+		          				</select>
+		          			</div>
+		          		</div>
+		          		<div class="form-group">
+		          			<label for="sellImage">Image:</label>
+		          			<div class="input-group col-xs-12">
+		          				<input class="form-control" type="file" name="sellImage" id="sellImage">
+		          			</div>
+		          		</div>
+		        	</div>
+		        </form>
+		        <div class="modal-footer">
+		        	<button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
+		          	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		        </div>
+		    </div>
+	    </div>
+	</div>
+
+			
+
+
+
+
+
+
+
+
+
+
+
+		</div>
+		<!--<script src="pagination.js"></script>-->
