--- a/partials/sell.html
+++ b/partials/sell.html
@@ -46,6 +46,8 @@
 	<div><a href="#" id="1">1</a></div>
 </div> -->
 
+
+
 	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#createSellPost">I want to sell my shoes!</button>
 	<!-- Modal -->
 	<div class="modal fade" id="createSellPost" role="dialog">
@@ -56,60 +58,20 @@
 		          	<button type="button" class="close" data-dismiss="modal">&times;</button>
 		          	<h4 class="modal-title">Please provide us the details about the shoes you want to sell</h4>
 		        </div>
-		        <form action="/controllers/shoe" method="POST">
+		        <form id="createShoePost" action="/controllers/shoe" method="POST">
 		        	<div class="modal-body">
 		          		<div class="form-group">
 		          			<label for="sellPostTitle">Title:</label>
 		          			<div class="input-group col-xs-12">
 		          				<input class="form-control" type="text" name="title" id="sellPostTitle">
 		          			</div>
-		          		</div>
-		          		<div class="form-group">
-		          			<label for="shoeBrand">Shoe Brand:</label>
-		          			<div class="input-group col-xs-12">
-		          				<select id="sellBrand">
-		          					<option value="nike">Nike</option>
-		          					<option value="jordan">Jordan</option>
-		          					<option value="adidas">Adidas</option>
-		          					<option value="puma">Puma</option>
-		          				</select>
-		          			</div>
-		          		</div>
-		          		<div class="form-group">
-		          			<label for="shoeModel">Shoe Model:</label>
-		          			<div class="input-group col-xs-12">
-		          				<input class="form-control" type="text" name="sellShoeModel" id="sellShoeModel">
-		          			</div>
-		          		</div>
-		          		<div class="form-group">
-		          			<label for="price">Price</label>
-		          			<div class="input-group col-xs-12">
-		          				<input class="form-control" type="text" name="sellPrice" id="sellPrice">
-		          			</div>
-		          		</div>
-		          		<div class="form-group">
-		          			<label for="sellCondition">Item Condition</label>
-		          			<div class="input-group col-xs-12">
-		          				<select id="sellCondition">
-		          					<option value="1">1</option>
-		          					<option value="2">2</option>
-		          					<option value="3">3</option>
-		          					<option value="4">4</option>
-		          					<option value="5">5</option>
-		          				</select>
-		          			</div>
-		          		</div>
-		          		<div class="form-group">
-		          			<label for="sellImage">Image:</label>
-		          			<div class="input-group col-xs-12">
-		          				<input class="form-control" type="file" name="sellImage" id="sellImage">
-		          			</div>
+							  <input type="submit" value="Submit">
 		          		</div>
 		        	</div>
 		        </form>
 		        <div class="modal-footer">
-		        	<button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
-		          	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		        	<!--<button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
+		          	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
 		        </div>
 		    </div>
 	    </div>
@@ -129,3 +91,5 @@
 
 		</div>
 		<!--<script src="pagination.js"></script>-->
+		    <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
+<script src="/partials/app.js" type="text/javascript" charset="utf-8"></script>
