sell page still being implemented

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -91,5 +91,5 @@
 
 		</div>
 		<!--<script src="pagination.js"></script>-->
-		    <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
+		   <!--  // <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script> -->
 <script src="/partials/app.js" type="text/javascript" charset="utf-8"></script>
