--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -58,11 +58,11 @@
 						<label for="itemConditionImg">Select Quality:</label>
 						<select class="form-control" name="itemCondition" id="itemConditionImg">
 							<option disabled selected value> -- Select a Quality -- </option>
-							<option value=5>Mint Condition</option>
-							<option value=4>New</option>
-							<option value=3>Worn Once or Twice</option>
-							<option value=2>2nd Hand</option>
-							<option value=1>Don't care about the quality, as long as I got it</option>
+								<option value=5>Brand New</option>
+								<option value=4>Passed as Deadstock / worn once or twice</option>
+								<option value=3>Worn less than 10 times</option>
+								<option value=2>Used</option>
+								<option value=1>Beaters</option>
 						</select>
 					</div>
 					<div class="form-group">
