shoe create complete, modal disappears after

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -98,14 +98,13 @@
 									<option value=8>US 8</option>
 									<option value=7>US 7</option>
 									<option value=6>US 6</option>
-									<option value=5>US 5</option>
 		          				</select>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
 		          			<label for="sellShoeCond">Shoes Condition:</label>
 		          			<div class="input-group col-xs-12">
-		          				<select class="form-control" name="size" id="sellShoeCond" required>
+		          				<select class="form-control" name="cond" id="sellShoeCond" required>
 		          					<option disabled selected value> -- Select a Quality -- </option>
 									<option value=5>Brand New</option>
 									<option value=4>Passed as Deadstock / worn once or twice</option>
@@ -132,7 +131,7 @@
 						<button type="button" class="btn btn-blog pull-left" data-dismiss="modal">
 						Close
 						</button>
-						<button type="submit" class="btn btn-blog pull-right">
+						<button id="createSellShoeButton" type="submit" class="btn btn-blog pull-right">
 						Create
 						</button>
 					</div>
