sell post validation still working

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -140,4 +140,4 @@
 	    </div>
 	</div>
 
-<script src="/partials/sellPost.js" type="text/javascript" charset="utf-8"></script>
+<script src="/partials/sellPost-controller.js" type="text/javascript" charset="utf-8"></script>
