form validation complete for frontend and backend

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -40,11 +40,11 @@
 <div id="postTitle">
 	<h1>Selling Shoes Post</h1>
 </div>
-<!-- 
+
 <div id="pagination" class="firstPage">
 	<h4> Display pagination </h4>
 	<div><a href="#" id="1">1</a></div>
-</div> -->
+</div>
 
 
 	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#createSellPost">I want to sell my shoes!</button>
@@ -69,7 +69,7 @@
 		          			<label for="sellShoeBrand">Shoe Brand:</label>
 		          			<div class="input-group col-xs-12">
 		          				<select class="form-control" name="brand" id="sellShoeBrand" required>>
-		          					<option disabled selected value> -- Select a Brand -- </option>
+		          					<option value="-- Select a Brand --"> -- Select a Brand -- </option>
 		          					<option value="Nike">Nike</option>
 		          					<option value="Jordan">Jordan</option>
 		          					<option value="Adidas">Adidas</option>
@@ -88,7 +88,7 @@
 		          			<label for="sellShoeSize">Shoe Size: (IN US)</label>
 		          			<div class="input-group col-xs-12">
 		          				<select class="form-control" name="size" id="sellShoeSize" required>
-		          					<option disabled selected value> -- Select a Size -- </option>
+		          					<option value=15> -- Select a Size -- </option>
 									<option value=14>US 14</option>
 									<option value=13>US 13</option>
 									<option value=12>US 12</option>
@@ -105,7 +105,7 @@
 		          			<label for="sellShoeCond">Shoes Condition:</label>
 		          			<div class="input-group col-xs-12">
 		          				<select class="form-control" name="cond" id="sellShoeCond" required>
-		          					<option disabled selected value> -- Select a Quality -- </option>
+		          					<option value=6> -- Select a Quality -- </option>
 									<option value=5>Brand New</option>
 									<option value=4>Passed as Deadstock / worn once or twice</option>
 									<option value=3>Worn less than 10 times</option>
