create sell post form validation complete, css TODO

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -63,6 +63,7 @@
 		          			<label for="sellPostTitle">Title:</label>
 		          			<div class="input-group col-xs-12">
 		          				<input class="form-control" type="text" name="title" id="sellPostTitle">
+		          				<div id="title_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
@@ -76,12 +77,14 @@
 		          					<option value="Puma">Puma</option>
 		          					<option value="etc">Etc</option>
 		          				</select>
+		          				<div id="brand_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
 		          			<label for="sellShoeModel">Shoe Model:</label>
 		          			<div class="input-group col-xs-12">
 		          				<input class="form-control" type="text" name="model" id="sellShoeModel">
+		          				<div id="model_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
@@ -99,6 +102,7 @@
 									<option value=7>US 7</option>
 									<option value=6>US 6</option>
 		          				</select>
+		          				<div id="size_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
@@ -112,18 +116,21 @@
 									<option value=2>Used</option>
 									<option value=1>Beaters</option>
 		          				</select>
+		          				<div id="condition_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
 		          			<label for="sellShoeDescription">Shoe Description:</label>
 		          			<div class="input-group col-xs-12">
 		          				<input class="form-control" type="text" name="description" id="sellShoeDescription">
+		          				<div id="description_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		          		<div class="form-group">
 		          			<label for="sellShoePrice">Price:</label>
 		          			<div class="input-group col-xs-12">
 		          				<input class="form-control" type="text" name="price" id="sellShoePrice">
+		          				<div id="price_sell_error" class="sell_error"></div>
 		          			</div>
 		          		</div>
 		        	</div>
