Able to validate form for resetting password on front end

--- a/partials/reset-password.html
+++ b/partials/reset-password.html
@@ -1,1 +1,20 @@
-hey hey hey
+<form id="reset_password_form" method="POST">
+	<label>New Password</label>
+	<input type="password" id="reset_new_password">
+	<div id="error_reset_new_password" class="account_error"></div>
+	
+	<br>
+	
+	<label>Confirm New Password</label>
+	<input type="password" id="reset_confirm_new_password">
+	<div id="error_reset_confirm_new_password" class="account_error"></div>
+	
+	<br>
+	
+	<input type="submit" value="Reset Password">
+</form>
+
+<script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
+<link href="/partials/login_style.css" rel="stylesheet">
+<script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
+<script src="/partials/reset-password.js" type="text/javascript" charset="utf-8"></script>
