--- a/partials/sell.html
+++ b/partials/sell.html
@@ -1,49 +1,44 @@
+<script src="/partials/sellPost-controller.js" type="text/javascript" charset="utf-8"></script>
+<script src="/partials/pagination-dev.js" type="text/javascript" charset="utf-8"></script>
 <style>
-#pagination div { 
-	display: inline-block; 
-	margin-right: 5px; 
-	margin-top: 5px 
-}
-#pagination .cell a { 
-	border-radius: 3px; 
-	font-size: 11px; 
-	color: #333; 
-	padding: 8px; 
-	text-decoration:none; 
-	border: 1px solid #d3d3d3; 
-	background-color: #f8f8f8; 
-}
-#pagination .cell a:hover { 
-	border: 1px solid #c6c6c6; 
-	background-color: #f0f0f0;  
-}
-
-#pagination .cell_active span { 
-	border-radius: 3px; 
-	font-size: 11px; 
-	color: #333; 
-	padding: 8px; 
-	border: 1px 
-	solid #c6c6c6; 
-	background-color: #e9e9e9; 
-}
-#pagination .cell_disabled span { 
-	border-radius: 3px; 
-	font-size: 11px; 
-	color: #777777; 
-	padding: 8px; 
-	border: 1px solid #dddddd; 
-	background-color: #ffffff; 
-}
+	#listofPages div { 
+		display: inline-block;
+		margin-left: 5px;
+		margin-right: 5px;
+	}
 </style>
-
 <div id="postTitle">
 	<h1>Selling Shoes Post</h1>
 </div>
 
-<div id="pagination" class="firstPage">
+
+<div id="postInfoNav" class="row">
+	<div class="col-md-4">
+		title
+	</div>
+	<div class="col-md-4">
+		price
+	</div>
+	<div class="col-md-4">
+		created 
+	</div>
+</div>
+
+<div id="articleArea" class="row">
+	<div id="postTitle" class="col-md-4">
+		post-title
+	</div>
+	<div id="postPrice" class="col-md-4">
+		post-price
+	</div>
+	<div id="postCreated" class="col-md-4">
+		post-created 
+	</div>
+</div>
+
+<div id="listofPages">
 	<h4> Display pagination </h4>
-	<div><a href="#" id="1">1</a></div>
+	<a href="#" id="1"></a>
 </div>
 
 
@@ -57,7 +52,7 @@
 		          	<button type="button" class="close" data-dismiss="modal">&times;</button>
 		          	<h4 class="modal-title">Please provide us the details about the shoes you want to sell</h4>
 		        </div>
-		        <form id="createShoePost" action="/controllers/shoe" method="POST">
+		        <form id="sellPostSubmit" action="/controllers/shoe" method="POST">
 		        	<div class="modal-body">
 		          		<div class="form-group">
 		          			<label for="sellPostTitle">Title:</label>
@@ -146,5 +141,3 @@
 		    </div>
 	    </div>
 	</div>
-
-<script src="/partials/sellPost-controller.js" type="text/javascript" charset="utf-8"></script>
