--- a/partials/sell.html
+++ b/partials/sell.html
@@ -25,15 +25,43 @@
 </div>
 
 <div id="articleArea" class="row">
-	<div id="postTitle" class="col-md-4">
-		post-title
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
 	</div>
-	<div id="postPrice" class="col-md-4">
-		post-price
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
 	</div>
-	<div id="postCreated" class="col-md-4">
-		post-created 
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
 	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
 </div>
 
 <div id="listofPages">
